# python-ROI

./: .env  .env.example  .gitignore  README.md  VLM-analysis.ipynb  pyproject.toml  pyprojecty.toml  test.py
docs/: appendix.md  outline.md  references.md
roid/: __main__.py  imset.py  roid.py
roii/: __main__.py  roii.py
roit/: __main__.py  roit.py
roit/utils/: clip_extractor.py  log_time.py  slerp.py
shell/: download.sh  sdgen.sh  test.sh  transform.sh
